# llm-stuff

./: .gitignore  README.md  pyproject.toml
01_local_rag/: README.md  app.py
llm_stuff/local_rag/: rag.py
local_rag/: app.py
